NXP-32776: Format/Cleanup